k8s.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ens-domain-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ens-domain-backend
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: ens-domain-backend
    spec:
      containers:
        - name: ens-domain-backend
          image: kawaiiislands/ens-domain-backend:1.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: docker-secret
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: ens-domain-backend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: ens-domain-backend

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ens-domain-backend
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: developers.kawaii.global
      http:
        paths:
          - pathType: Prefix
            path: "/ens-domain"
            backend:
              service:
                name: ens-domain-backend
                port:
                  number: 3000
